create body works as json
