# pb/punchh/workflowapi/workflow_api.pb.go
@@ -67,10 +67,10 @@ func (m *CreateWorkflowRequest) GetWorkflow() *workflow.Workflow {
 
 // CreateWorkflowResponse represents a response.
 type CreateWorkflowResponse struct {
-	Workflow             *workflow.Workflow `protobuf:"bytes,1,opt,name=workflow,proto3" json:"workflow,omitempty"`
-	XXX_NoUnkeyedLiteral struct{}           `json:"-"`
-	XXX_unrecognized     []byte             `json:"-"`
-	XXX_sizecache        int32              `json:"-"`
+	Id                   int64    `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
 }
 
 func (m *CreateWorkflowResponse) Reset()         { *m = CreateWorkflowResponse{} }
@@ -98,11 +98,11 @@ func (m *CreateWorkflowResponse) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_CreateWorkflowResponse proto.InternalMessageInfo
 
-func (m *CreateWorkflowResponse) GetWorkflow() *workflow.Workflow {
+func (m *CreateWorkflowResponse) GetId() int64 {
 	if m != nil {
-		return m.Workflow
+		return m.Id
 	}
-	return nil
+	return 0
 }
 
 // ReadWorkflowRequest represents a read workflow requests
@@ -197,21 +197,21 @@ func init() {
 }
 
 var fileDescriptor_b7198b79946a0984 = []byte{
-	// 217 bytes of a gzipped FileDescriptorProto
+	// 220 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x52, 0x2d, 0x28, 0xcd, 0x4b,
 	0xce, 0xc8, 0xd0, 0x2f, 0xcf, 0x2f, 0xca, 0x4e, 0xcb, 0xc9, 0x2f, 0x4f, 0x2c, 0xc8, 0x84, 0xb3,
 	0xe3, 0x13, 0x0b, 0x32, 0xf5, 0x0a, 0x8a, 0xf2, 0x4b, 0xf2, 0x85, 0xb8, 0x91, 0xe4, 0xa5, 0xe4,
 	0xd0, 0xf4, 0xc0, 0x19, 0x10, 0xc5, 0x4a, 0xee, 0x5c, 0xa2, 0xce, 0x45, 0xa9, 0x89, 0x25, 0xa9,
 	0xe1, 0x50, 0xf1, 0xa0, 0xd4, 0xc2, 0xd2, 0xd4, 0xe2, 0x12, 0x21, 0x3d, 0x2e, 0x0e, 0x98, 0x52,
 	0x09, 0x46, 0x05, 0x46, 0x0d, 0x6e, 0x23, 0x21, 0x3d, 0xb8, 0x5e, 0xb8, 0x62, 0xb8, 0x1a, 0x25,
-	0x0f, 0x2e, 0x31, 0x74, 0x83, 0x8a, 0x0b, 0xf2, 0xf3, 0x8a, 0x53, 0x49, 0x36, 0x49, 0x95, 0x4b,
-	0x38, 0x28, 0x35, 0x31, 0x05, 0xdd, 0x41, 0x7c, 0x5c, 0x4c, 0x99, 0x29, 0x60, 0x03, 0x98, 0x83,
-	0x98, 0x32, 0x53, 0x94, 0xdc, 0xb8, 0x44, 0x50, 0x95, 0x91, 0x67, 0x9d, 0xd1, 0x5e, 0x46, 0x2e,
-	0x6e, 0x98, 0xb0, 0x63, 0x80, 0xa7, 0x50, 0x24, 0x17, 0x1f, 0xaa, 0x47, 0x84, 0x94, 0xf4, 0x90,
-	0x42, 0x54, 0x0f, 0x6b, 0x70, 0x49, 0x29, 0xe3, 0x55, 0x03, 0x75, 0x5a, 0x30, 0x17, 0x0f, 0xb2,
-	0x93, 0x85, 0x14, 0x50, 0x34, 0x61, 0xf1, 0xb4, 0x94, 0x22, 0x1e, 0x15, 0x10, 0x43, 0x9d, 0xf8,
-	0xa3, 0x78, 0x91, 0xd4, 0x14, 0x24, 0x25, 0xb1, 0x81, 0x63, 0xd6, 0x18, 0x10, 0x00, 0x00, 0xff,
-	0xff, 0xd7, 0xe4, 0x78, 0x4a, 0x2f, 0x02, 0x00, 0x00,
+	0x0d, 0x2e, 0x31, 0x74, 0x83, 0x8a, 0x0b, 0xf2, 0xf3, 0x8a, 0x53, 0x85, 0xf8, 0xb8, 0x98, 0x32,
+	0x53, 0xc0, 0x66, 0x30, 0x07, 0x31, 0x65, 0xa6, 0x28, 0xa9, 0x72, 0x09, 0x07, 0xa5, 0x26, 0xa6,
+	0xa0, 0x5b, 0x88, 0xae, 0xcc, 0x8d, 0x4b, 0x04, 0x55, 0x19, 0xd4, 0x38, 0x12, 0x1d, 0x66, 0xb4,
+	0x97, 0x91, 0x8b, 0x1b, 0x26, 0xec, 0x18, 0xe0, 0x29, 0x14, 0xc9, 0xc5, 0x87, 0xea, 0x50, 0x21,
+	0x25, 0x3d, 0xa4, 0x10, 0xd3, 0xc3, 0x1a, 0x1c, 0x52, 0xca, 0x78, 0xd5, 0x40, 0x9d, 0x16, 0xcc,
+	0xc5, 0x83, 0xec, 0x64, 0x21, 0x05, 0x14, 0x4d, 0x58, 0x3c, 0x2d, 0xa5, 0x88, 0x47, 0x05, 0xc4,
+	0x50, 0x27, 0xfe, 0x28, 0x5e, 0x24, 0x35, 0x05, 0x49, 0x49, 0x6c, 0xe0, 0x98, 0x33, 0x06, 0x04,
+	0x00, 0x00, 0xff, 0xff, 0x50, 0x9e, 0xed, 0xe4, 0x0f, 0x02, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -226,9 +226,9 @@ const _ = grpc.SupportPackageIsVersion4
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
 type WorkflowAPIClient interface {
-	// CreateWorkflow creates a workflow.
+	// CreateWorkflow ...
 	CreateWorkflow(ctx context.Context, in *CreateWorkflowRequest, opts ...grpc.CallOption) (*CreateWorkflowResponse, error)
-	// ReadWorkflow reads a workflow by id.
+	// ReadWorkflow ...
 	ReadWorkflow(ctx context.Context, in *ReadWorkflowRequest, opts ...grpc.CallOption) (*ReadWorkflowResponse, error)
 }
 
@@ -260,9 +260,9 @@ func (c *workflowAPIClient) ReadWorkflow(ctx context.Context, in *ReadWorkflowRe
 
 // WorkflowAPIServer is the server API for WorkflowAPI service.
 type WorkflowAPIServer interface {
-	// CreateWorkflow creates a workflow.
+	// CreateWorkflow ...
 	CreateWorkflow(context.Context, *CreateWorkflowRequest) (*CreateWorkflowResponse, error)
-	// ReadWorkflow reads a workflow by id.
+	// ReadWorkflow ...
 	ReadWorkflow(context.Context, *ReadWorkflowRequest) (*ReadWorkflowResponse, error)
 }
 
